# np_meta

./: README.md  pyproject.toml
src/: __main__.py
src/metaheuristic/: aco.py  solver.py
src/problem/: __init__.py  knapsack.py  qap.py  tsp.py
tests/: test_np_meta.py
